# Project-Medical

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-mongo.js  pyproject.toml
app/: migrate_csv_to_mongo.py  schema.py  test_migrate.py
data/: test.csv
json/: healthcare_dataset_post_report.json  healthcare_dataset_pre_report.json  schema.json  test_post_report.json
notebooks/: projet_medical.ipynb
