[project]
name = "projet-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jsonschema>=4.26.0",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
